kubernetes/test/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: ecommerce-policy
  namespace: ecommerce

spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector: {}

  egress:
  - to:
    - podSelector: {}
